------
v2.0.1
------




------
v2.0.0
------

[mjr] Support import of HTML bookmark files.
[mjr] Added removeUserData API (Request #13688).
[mjr] Fix missing CSS rules for blocks.
[mjr] Add new block for displaying bookmarks tagged with a certain set of tags
      (Request #13020).


-------
v1.1.10
-------

[mjr] SECURITY: Fix Directory Traversal Vulnerability (Reported By: Andrea
      Cardaci working with Trend Micro Zero Day Initiative).



------
v1.1.9
------

[jan] Officially support PHP 7.


------
v1.1.8
------

[jan] SECURITY: Fix open redirects.


------
v1.1.7
------

[jan] Update German translation.


------
v1.1.6
------

[mjr] Honor ['content_index']['enabled'] setting (Bug #14345).
[jan] Add Basque translation (Ibon Igartua <ibon.igartua@ehu.eus>).


------
v1.1.5
------

[jan] Add Greek translation (Limperis Antonis <limperis@cti.gr>).
[cjh] Fix error when deleting bookmarks.


------
v1.1.4
------

[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix tag links when tags contain URL special characters.


------
v1.1.3
------

[jan] Update Italian translation.
[mjr] Remove object reference from Content when object is deleted (Bug #14112).


------
v1.1.2
------

[jan] Update Italian translation.
[jan] Update German translation.
[jan] Update Hungarian translation.
[mjr] Fix shebang (after install) for trean scripts (Remi Collet
      <fedora@famillecollet.com>).
[mjr] Use the favicon when returning tag search results via the API if
      possible.


------
v1.1.1
------

[mjr] Fix fatal error due to botched merge.


------
v1.1.0
------

[mjr] Fix creating tags from folder names when importing bookmarks.


---------
v1.1.0RC1
---------

[jan] Add Hungarian translation (Andras Galos <galosa@netinform.hu>).
[jan] Add Danish translation (Erling Preben Hansen <erling@eph.dk>).
[mjr] Add support for importing bookmarks from Mozilla's JSON format.


------
v1.0.3
------

[mjr] Fix some minor issues with crawling bookmarks.