@@ -2,7 +2,8 @@
 v2.0.1
 ------
 
-
+[rla] Properly mark as H6 and PHP 8 compatible.
+|+
 
 
 ------
